FEAT Learn more without refreshing

--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
                 <button class="learn-more">Learn more</button>
             </div>
         </main>
+        
+        <!-- Section détails de l'offre (cachée par défaut) -->
+        <div id="job-details" class="job-details hidden">
+            <button id="back-btn" class="back-btn">← Retour aux offres</button>
+            <div class="job-detail-content">
+                <h2 id="detail-title"></h2>
+                <p id="detail-company" class="company"></p>
+                <p id="detail-description" class="description"></p>
+                <div class="job-info">
+                    <h3>Informations complémentaires</h3>
+                    <p id="detail-requirements"></p>
+                    <p id="detail-location"></p>
+                    <p id="detail-salary"></p>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
