FIX Police, button Learn More and JS Button

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="text-wrapper-7">Profil</div>
           <div class="text-wrapper-7">Mes Candidatures</div>
           <div class="text-wrapper-7">Mes Alertes</div>
-          <button class="button"><div class="text-wrapper-8">Trouvez votre emploi !</div></button>
+          <a href="offers.html"><button class="button"><div class="text-wrapper-8">Trouvez votre emploi !</div></button></a>
         </div>
       </div>
       <div class="text-wrapper-9">Nos engagements</div>
@@ -125,7 +125,7 @@
           vous corresponds simplement dès maintenant !
         </p>
       </div>
-      <button class="button-5"><div class="text-wrapper-22">Rechercher</div></button>
+      <a href="offers.html"><button class="button-5"><div class="text-wrapper-22">Rechercher</div></button></a>
       <div class="search">
         <div class="content">
           <div class="magnifyingglass"><div class="magnifyingglass-2">􀊫</div></div>
@@ -162,5 +162,6 @@
         src="img/journe-e-mondiale-de-l-environnement-5-juin-s-engager-pour-l-environnement-1.png"
       />
     </div>
+    <script src="index-script.js"></script>
   </body>
 </html>
