FEAT Search bar

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <div class="search">
         <div class="content">
           <div class="magnifyingglass"><div class="magnifyingglass-2">􀊫</div></div>
-          <div class="placeholder-label">Search</div>
+          <input type="text" id="search-input" class="search-input" placeholder="Rechercher une offre d'emploi...">
         </div>
       </div>
       <div class="group">
