--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="navigation">
         <div class="text-wrapper-6">Jobly</div>
         <div class="items-2">
-          <div class="text-wrapper-7">Profil</div>
+          <a href="profil.html"><div class="text-wrapper-7">Profil</div></a>
           <div class="text-wrapper-7">Mes Candidatures</div>
           <div class="text-wrapper-7">Mes Alertes</div>
           <a href="offers.html"><button class="button"><div class="text-wrapper-8">Trouvez votre emploi !</div></button></a>
