--- a/offers.html
+++ b/offers.html
@@ -58,6 +58,10 @@
                         <label for="telephone">Téléphone *</label>
                         <input type="tel" id="telephone" name="telephone" required>
                     </div>
+                    <div class="form-group">
+                        <label for="message">Message (optionnel)</label>
+                        <textarea id="message" name="message" rows="4" placeholder="Votre message de motivation..."></textarea>
+                    </div>
                     <button type="submit" class="submit-btn">Envoyer</button>
                 </form>
             </div>
