FEAT Admin page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="customer-quote">
           <p class="div">“Merci à Jobly pour le poste”</p>
           <div class="avatar">
-            <img class="img" src="img/avatar-2.svg" />
+
             <div class="frame">
               <div class="text-wrapper-2">Latif</div>
               <div class="text-wrapper-3">Troubadour chez AWS</div>
@@ -24,7 +24,7 @@
         <div class="customer-quote-2">
           <p class="div">“Je n’y serai jamais arrivé sans Jobly”</p>
           <div class="avatar">
-            <img class="img" src="img/avatar.svg" />
+
             <div class="frame">
               <div class="text-wrapper-2">Aymen</div>
               <p class="text-wrapper-3">Laveur de vitres chez OpenAI</p>
@@ -34,7 +34,7 @@
         <div class="customer-quote-3">
           <p class="div">“Le job dont je rêvais !”</p>
           <div class="avatar">
-            <img class="img" src="img/image.svg" />
+
             <div class="frame">
               <div class="text-wrapper-2">Ahmed</div>
               <p class="text-wrapper-3">Cracheur de feu chez Thalès</p>
@@ -50,8 +50,7 @@
           <div class="text-wrapper-5">Offres de stages</div>
         </div>
         <p class="jobly-co-rue-th">Jobly &amp; Co<br />16 Rue Théodore Blanc<br />33520 Bruges</p>
-        <img class="social-icons" src="img/social-icons.svg" />
-        <img class="divider" src="img/divider.svg" />
+
       </div>
       <div class="navigation">
         <div class="text-wrapper-6">Jobly</div>
@@ -82,10 +81,7 @@
           </div>
         </div>
       </div>
-      <img
-        class="element-engagement"
-        src="img/323429-engagement-social-les-10-questions-a-vous-poser-web-tete-0302273154212-1.png"
-      />
+
       <div class="text-wrapper-13">Notre concept</div>
       <div class="text">
         <div class="text-2">
@@ -108,13 +104,13 @@
         </div>
       </div>
       <div class="buttons">
-        <button class="div-wrapper"><div class="text-wrapper-18">Se Connecter</div></button>
-        <button class="button-2"><div class="text-wrapper-19">Nous rejoindre !</div></button>
+        <a href="connexion.html" class="div-wrapper"><div class="text-wrapper-18">Se Connecter</div></a>
+        <a href="inscription.html" class="button-2"><div class="text-wrapper-19">Nous rejoindre !</div></a>
       </div>
       <div class="section">
         <div class="buttons-2">
-          <button class="button-3"><div class="text-wrapper-18">Se Connecter</div></button>
-          <button class="button-4"><div class="text-wrapper-20">Nous rejoindre !</div></button>
+          <a href="connexion.html" class="button-3"><div class="text-wrapper-18">Se Connecter</div></a>
+          <a href="inscription.html" class="button-4"><div class="text-wrapper-20">Nous rejoindre !</div></a>
         </div>
         <div class="text-wrapper-21">Vivons l’aventure ensemble</div>
       </div>
@@ -152,15 +148,9 @@
             <p class="text-wrapper-17">Première banque d’Europe et premier employeur de France !</p>
           </div>
         </div>
-        <img class="nvidia-logo-vert" src="img/nvidia-logo-vert-1.png" />
-        <img class="credit-agricole-logo" src="img/credit-agricole-logo-1024x576-1.png" />
-        <img class="logo-cdiscount" src="img/logo-cdiscount-1.png" />
+
       </div>
-      <img class="logo-de-jobly-en" src="img/logo-de-jobly-en-orange-1.png" />
-      <img
-        class="journee-mondiale-de"
-        src="img/journe-e-mondiale-de-l-environnement-5-juin-s-engager-pour-l-environnement-1.png"
-      />
+
     </div>
     <script src="index-script.js"></script>
   </body>
