--- a/offers.html
+++ b/offers.html
@@ -15,6 +15,10 @@
             <p class="subtitle">Découvrez nos offres d'emploi</p>
         </header>
         
+        <div class="profile-actions">
+            <a href="index.html"><button class="back-btn">← Retour à l'accueil</button></a>
+        </div>
+        
         <main class="jobs-grid">
 
         </main>
