FIX files order

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="globals.css" />
-    <link rel="stylesheet" href="styleguide.css" />
-    <link rel="stylesheet" href="indexstyle.css" />
+    <link rel="stylesheet" href="css/globals.css" />
+    <link rel="stylesheet" href="css/styleguide.css" />
+    <link rel="stylesheet" href="css/indexstyle.css" />
   </head>
   <body>
     <div class="page-d-accueil">
@@ -55,9 +55,9 @@
       <div class="navigation">
         <div class="text-wrapper-6">Jobly</div>
         <div class="items-2">
-          <a href="connexion.html"><div class="text-wrapper-7">Profil</div></a>
-          <a href="candidatures.html"><div class="text-wrapper-7">Mes Candidatures</div></a>
-          <a href="offers.html"><button class="button"><div class="text-wrapper-8">Trouvez votre emploi !</div></button></a>
+          <a href="pages/connexion.html"><div class="text-wrapper-7">Profil</div></a>
+          <a href="pages/candidatures.html"><div class="text-wrapper-7">Mes Candidatures</div></a>
+          <a href="pages/offers.html"><button class="button"><div class="text-wrapper-8">Trouvez votre emploi !</div></button></a>
         </div>
       </div>
       <div class="text-wrapper-9">Nos engagements</div>
@@ -103,13 +103,13 @@
         </div>
       </div>
       <div class="buttons">
-        <a href="connexion.html" class="div-wrapper"><div class="text-wrapper-18">Se Connecter</div></a>
-        <a href="inscription.html" class="button-2"><div class="text-wrapper-19">Nous rejoindre !</div></a>
+        <a href="pages/connexion.html" class="div-wrapper"><div class="text-wrapper-18">Se Connecter</div></a>
+        <a href="pages/inscription.html" class="button-2"><div class="text-wrapper-19">Nous rejoindre !</div></a>
       </div>
       <div class="section">
         <div class="buttons-2">
-          <a href="connexion.html" class="button-3"><div class="text-wrapper-18">Se Connecter</div></a>
-          <a href="inscription.html" class="button-4"><div class="text-wrapper-20">Nous rejoindre !</div></a>
+          <a href="pages/connexion.html" class="button-3"><div class="text-wrapper-18">Se Connecter</div></a>
+          <a href="pages/inscription.html" class="button-4"><div class="text-wrapper-20">Nous rejoindre !</div></a>
         </div>
         <div class="text-wrapper-21">Vivons l’aventure ensemble</div>
       </div>
@@ -120,7 +120,7 @@
           vous corresponds simplement dès maintenant !
         </p>
       </div>
-      <a href="offers.html"><button class="button-5"><div class="text-wrapper-22">Rechercher</div></button></a>
+      <a href="pages/offers.html"><button class="button-5"><div class="text-wrapper-22">Rechercher</div></button></a>
       <div class="search">
         <div class="content">
           <div class="magnifyingglass"><div class="magnifyingglass-2">􀊫</div></div>
@@ -151,6 +151,6 @@
       </div>
 
     </div>
-    <script src="index-script.js"></script>
+    <script src="js/index-script.js"></script>
   </body>
 </html>
