--- a/pages/admin.html
+++ b/pages/admin.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jobly - Administration</title>
-    <link rel="stylesheet" href="globals.css">
-    <link rel="stylesheet" href="styleguide.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/globals.css">
+    <link rel="stylesheet" href="../css/styleguide.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div class="container">
@@ -59,10 +59,10 @@
             </div>
             
             <div class="profile-actions">
-                <a href="index.html"><button class="back-btn">← Retour à l'accueil</button></a>
+                <a href="../index.html"><button class="back-btn">← Retour à l'accueil</button></a>
             </div>
         </main>
     </div>
-    <script src="admin-script.js"></script>
+    <script src="../js/admin-script.js"></script>
 </body>
 </html>
