--- a/pages/candidatures.html
+++ b/pages/candidatures.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jobly - Mes Candidatures</title>
-    <link rel="stylesheet" href="globals.css">
-    <link rel="stylesheet" href="styleguide.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/globals.css">
+    <link rel="stylesheet" href="../css/styleguide.css">
+    <link rel="stylesheet" href="../css/style.css">
     <style>
         .candidature-item {
             margin-bottom: 20px;
@@ -42,7 +42,7 @@
         </header>
         
         <div class="profile-actions">
-            <a href="index.html"><button class="back-btn">← Retour à l'accueil</button></a>
+            <a href="../index.html"><button class="back-btn">← Retour à l'accueil</button></a>
         </div>
         
         <main class="profile-content">
