--- a/pages/connexion.html
+++ b/pages/connexion.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jobly - Connexion</title>
-    <link rel="stylesheet" href="globals.css">
-    <link rel="stylesheet" href="styleguide.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/globals.css">
+    <link rel="stylesheet" href="../css/styleguide.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div class="container">
@@ -32,7 +32,7 @@
             </div>
             
             <div class="profile-actions">
-                <a href="index.html"><button class="back-btn">← Retour à l'accueil</button></a>
+                <a href="../index.html"><button class="back-btn">← Retour à l'accueil</button></a>
             </div>
         </main>
     </div>
