--- a/pages/offers.html
+++ b/pages/offers.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jobly - Offres d'emploi</title>
-    <link rel="stylesheet" href="globals.css">
-    <link rel="stylesheet" href="styleguide.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/globals.css">
+    <link rel="stylesheet" href="../css/styleguide.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div class="container">
@@ -16,7 +16,7 @@
         </header>
         
         <div class="profile-actions">
-            <a href="index.html"><button class="back-btn">← Retour à l'accueil</button></a>
+            <a href="../index.html"><button class="back-btn">← Retour à l'accueil</button></a>
         </div>
         
         <main class="jobs-grid">
@@ -71,6 +71,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
