--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           vous corresponds simplement dès maintenant !
         </p>
       </div>
-      <a href="pages/offers.html"><button class="button-5"><div class="text-wrapper-22">Rechercher</div></button></a>
+      <button class="button-5"><div class="text-wrapper-22">Rechercher</div></button>
       <div class="search">
         <div class="content">
           <div class="magnifyingglass"><div class="magnifyingglass-2">􀊫</div></div>
