FEAT Admin Authentification

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="navigation">
         <div class="text-wrapper-6">Jobly</div>
         <div class="items-2">
-          <a href="pages/connexion.html"><div class="text-wrapper-7">Profil</div></a>
+          <a href="#" id="profil-link"><div class="text-wrapper-7">Profil</div></a>
           <a href="pages/candidatures.html"><div class="text-wrapper-7">Mes Candidatures</div></a>
           <a href="pages/offers.html"><button class="button"><div class="text-wrapper-8">Trouvez votre emploi !</div></button></a>
         </div>
@@ -103,12 +103,12 @@
         </div>
       </div>
       <div class="buttons">
-        <a href="pages/connexion.html" class="div-wrapper"><div class="text-wrapper-18">Se Connecter</div></a>
+        <a href="#" id="profil-link-3" class="div-wrapper"><div class="text-wrapper-18">Se Connecter</div></a>
         <a href="pages/inscription.html" class="button-2"><div class="text-wrapper-19">Nous rejoindre !</div></a>
       </div>
       <div class="section">
         <div class="buttons-2">
-          <a href="pages/connexion.html" class="button-3"><div class="text-wrapper-18">Se Connecter</div></a>
+          <a href="#" id="profil-link-2" class="button-3"><div class="text-wrapper-18">Se Connecter</div></a>
           <a href="pages/inscription.html" class="button-4"><div class="text-wrapper-20">Nous rejoindre !</div></a>
         </div>
         <div class="text-wrapper-21">Vivons l’aventure ensemble</div>
