FEAT Company dashboard

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -52,6 +52,12 @@
                 </form>
             </div>
             
+            <!-- Demandes d'inscription entreprises -->
+            <div class="profile-card">
+                <h2>Demandes d'inscription entreprises</h2>
+                <div id="company-requests" class="requests-list"></div>
+            </div>
+            
             <!-- Liste des offres -->
             <div class="profile-card">
                 <h2>Offres existantes</h2>
