--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="items-2">
           <a href="#" id="profil-link"><div class="text-wrapper-7">Profil</div></a>
           <a href="pages/candidatures.html"><div class="text-wrapper-7">Mes Candidatures</div></a>
+          <a href="pages/inscription-entreprise.html"><div class="text-wrapper-7">Entreprises</div></a>
           <a href="pages/offers.html"><button class="button"><div class="text-wrapper-8">Trouvez votre emploi !</div></button></a>
         </div>
       </div>
