FEAT Images in index

--- a/index.html
+++ b/index.html
@@ -42,16 +42,6 @@
           </div>
         </div>
       </div>
-      <div class="navigation-footer">
-        <div class="items">
-          <div class="text-wrapper-4">A Propos</div>
-          <div class="text-wrapper-5">Qui sommes-nous ?</div>
-          <div class="text-wrapper-5">Offres d’emplois</div>
-          <div class="text-wrapper-5">Offres de stages</div>
-        </div>
-        <p class="jobly-co-rue-th">Jobly &amp; Co<br />16 Rue Théodore Blanc<br />33520 Bruges</p>
-
-      </div>
       <div class="navigation">
         <div class="text-wrapper-6">Jobly</div>
         <div class="items-2">
@@ -65,6 +55,7 @@
       <div class="cards-2">
         <div class="card">
           <div class="copy">
+            <img src="Images/Social.jpg" alt="Engagement Social" class="engagement-image">
             <div class="text-wrapper-10">Sociaux</div>
             <p class="p">
               Depuis sa création, Jobly favorise les entreprises RSE ainsi que les labels Great Place To Work !
@@ -73,7 +64,8 @@
         </div>
         <div class="card">
           <div class="copy-2">
-            <div class="text-wrapper-11">Environementaux</div>
+            <img src="Images/Environnement.png" alt="Engagement Environnemental" class="engagement-image">
+            <div class="text-wrapper-11">Environnementaux</div>
             <p class="text-wrapper-12">
               En aidant 4536 postulants à trouver un emploi plus près de chez eux, Jobly a permis d’économiser 400
               tonnes de CO2.
@@ -132,18 +124,21 @@
         <div class="text-wrapper-23">Nos partenaires</div>
         <div class="copy-wrapper">
           <div class="copy-3">
+            <img src="Images/logo-cdiscount.png" alt="CDiscount Logo" class="partner-logo">
             <div class="text-wrapper-24">CDiscount</div>
             <p class="text-wrapper-17">Le géant du e-commerce chez nous, à Bordeaux !</p>
           </div>
         </div>
         <div class="card-2">
           <div class="copy-3">
+            <img src="Images/Nvidia_(logo).svg.png" alt="NVIDIA Logo" class="partner-logo">
             <div class="text-wrapper-24">NVIDIA</div>
             <p class="text-wrapper-17">La plus grande entreprise Tech du monde !</p>
           </div>
         </div>
         <div class="card-3">
           <div class="copy-3">
+            <img src="Images/Credit-Agricole-Logo-1024x576.png" alt="Crédit Agricole Logo" class="partner-logo">
             <div class="text-wrapper-24">Crédit Agricole</div>
             <p class="text-wrapper-17">Première banque d’Europe et premier employeur de France !</p>
           </div>
