FIX Prettier Index

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       </div>
 
       <div class="text-wrapper-13">Notre concept</div>
+      <img src="Images/Logo Jobly.png" alt="Logo Jobly" class="concept-logo">
       <div class="text">
         <div class="text-2">
           <p class="text-wrapper-14">Postuler uniquement en un click !</p>
