FEAT Register in connexion page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="items-2">
           <a href="#" id="profil-link"><div class="text-wrapper-7">Profil</div></a>
           <a href="pages/candidatures.html"><div class="text-wrapper-7">Mes Candidatures</div></a>
-          <a href="pages/inscription-entreprise.html"><div class="text-wrapper-7">Entreprises</div></a>
+          <a href="pages/inscription-entreprise.html"><div class="text-wrapper-7">Enregistrez votre entreprise !</div></a>
           <a href="pages/offers.html"><button class="button"><div class="text-wrapper-8">Trouvez votre emploi !</div></button></a>
         </div>
       </div>
@@ -78,7 +78,7 @@
       <img src="Images/Logo Jobly.png" alt="Logo Jobly" class="concept-logo">
       <div class="text">
         <div class="text-2">
-          <p class="text-wrapper-14">Postuler uniquement en un click !</p>
+          <p class="text-wrapper-14">Postuler uniquement en un clic !</p>
           <p class="text-wrapper-15">Chez nous, pas d’inscription tierce, pas de mots de passes annexes à gérer !</p>
         </div>
         <div class="text-2">
@@ -108,7 +108,7 @@
         <div class="text-wrapper-21">Vivons l’aventure ensemble</div>
       </div>
       <div class="page-title">
-        <p class="landing-page-title">Votre job en un click, pas plus !</p>
+        <p class="landing-page-title">Votre job en un clic, pas plus !</p>
         <p class="une-recherche-d">
           Une recherche d’emploi ne devrait pas se résumer à remplir des formulaires.<br /><br />Trouvez l’emploi qui
           vous corresponds simplement dès maintenant !
