--- a/pages/connexion.html
+++ b/pages/connexion.html
@@ -29,6 +29,9 @@
                     </div>
                     <button type="submit" class="submit-btn">Se connecter</button>
                 </form>
+                <div class="signup-link">
+                    <p>Pas encore de compte ? <a href="inscription.html">Créer un compte</a></p>
+                </div>
             </div>
             
             <div class="profile-actions">
