FIX No more "Create an alert"

--- a/pages/offers.html
+++ b/pages/offers.html
@@ -137,8 +137,8 @@
     <div class="bottom-cta">
         <div class="cta-content">
             <h3>Vous ne trouvez pas votre bonheur ?</h3>
-            <p>Créez une alerte emploi et recevez les nouvelles offres directement par email</p>
-            <button class="cta-button">Créer une alerte</button>
+            <p>C'est normal pas d'inquiétudes, nous sommes jeunes, des nouveautés arriveront bientôt alors venez nous voir régulièrement !</p>
+
         </div>
     </div>
     <script src="../js/script.js"></script>
