--- a/pages/offers.html
+++ b/pages/offers.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <div class="geometric-bg">
+        <div class="shape shape-1"></div>
+        <div class="shape shape-2"></div>
+        <div class="shape shape-3"></div>
+        <div class="shape shape-4"></div>
+        <div class="shape shape-5"></div>
+    </div>
     <div class="container">
         <header>
             <h1>Jobly</h1>
