FEAT Applications on company dashboard

--- a/pages/entreprise-dashboard.html
+++ b/pages/entreprise-dashboard.html
@@ -73,6 +73,7 @@
             
             <div class="profile-actions">
                 <a href="../index.html"><button class="back-btn">← Retour à l'accueil</button></a>
+                <a href="candidatures-entreprise.html"><button class="learn-more">📋 Voir les candidatures</button></a>
                 <button class="back-btn" onclick="logout()">Déconnexion</button>
             </div>
         </main>
