FEAT Click on company to see their website

--- a/pages/offers.html
+++ b/pages/offers.html
@@ -112,6 +112,20 @@
             </div>
         </div>
         
+        <!-- Section informations entreprise (cachée par défaut) -->
+        <div id="company-info" class="job-details hidden">
+            <button id="back-from-company" class="back-btn">← Retour aux offres</button>
+            <div class="job-detail-content">
+                <h2 id="company-name"></h2>
+                <div class="job-info">
+                    <h3>Informations sur l'entreprise</h3>
+                    <p id="company-location"></p>
+                    <p id="company-description"></p>
+                    <p id="company-website"></p>
+                </div>
+            </div>
+        </div>
+        
         <!-- Formulaire de candidature (caché par défaut) -->
         <div id="application-form" class="application-form hidden">
             <button id="back-to-details" class="back-btn">← Retour aux détails</button>
