--- a/pages/cv-analyzer.html
+++ b/pages/cv-analyzer.html
@@ -199,7 +199,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container" style="padding-top: 60px;">
         <div class="profile-actions" style="margin-bottom: 20px;">
             <a href="../index.html"><button class="back-btn">← Retour à l'accueil</button></a>
             <a href="profil.html"><button class="learn-more">Mon profil</button></a>
